--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Joul_Pteas</string>
+    <string name="app_name">CKCC</string>
+    <string name="Ok">យល </string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
